--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.8.3",
     "xss-clean": "^0.1.4"
   }
